tests/good/interpret/032-higher-order-2.clap
def compose (f) (g) (x) = f (g x)
val z = compose (fun (x) => x * 2) (fun (x) => x + 1) 20

