tests/bad/interpret/010-undefined-func.clap
def  f (x) = g (x)
with g (x) = h (x)

val q = f (42)

